# opensprig

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.sh  main.cpp  memmap.ld  memory.x  memory.x.firmware  memory.x.parts
.cargo/: config.toml
convert/: convert.sh
cyw43/: place.sh
examples/badapple/: CMakeLists.txt  main.cpp
examples/firmware/src/: main.rs
examples/helloworld/: CMakeLists.txt  main.cpp
firmware/: Cargo.toml
firmware/src/: main.rs
font/: generate.py  map.json
opensprig/: CMakeLists.txt
opensprig-rs/: Cargo.toml
opensprig-rs/src/: font.rs  lib.rs  mutex_device.rs
opensprig-rs/src/hardware/: button.rs  led.rs  mod.rs  screen.rs  speaker.rs  storage.rs
opensprig-rs/src/types/: colour.rs  error.rs  mod.rs
opensprig/bridge/: button_bridge.cpp  led_bridge.cpp  screen_bridge.cpp  speaker_bridge.cpp  storage_bridge.cpp
opensprig/include/: button.h  led.h  screen.h  speaker.h  storage.h
opensprig/include/ui/: widget.h
opensprig/include/ui/widgets/: label.h
opensprig/src/def/: font.h  hw_config.cpp
opensprig/src/hardware/: button.cpp  led.cpp  screen.cpp  speaker.cpp  st7735.h  storage.cpp
opensprig/src/ui/: widget.cpp
opensprig/src/ui/widgets/: label.cpp
parts/blink/: Cargo.toml
parts/blink/src/: main.rs
parts/chat/: Cargo.toml
parts/chat/src/: keyboard.rs  main.rs
parts/hardware_checker/: Cargo.toml
parts/hardware_checker/src/: dpad_indicator.rs  main.rs
scripts/: genfont.py
src/: button.rs  lib.rs
src/bridge/: button_bridge.rs  led_bridge.rs  mod.rs  screen_bridge.rs  speaker_bridge.rs  storage_bridge.rs
words/: generate.py  words.txt
