[workspace]
resolver = "3"
members = ["firmware","opensprig-rs", "parts/blink"]
default-members = ["firmware"]

[profile.dev]
debug = 2
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
debug-assertions = false
overflow-checks = false
